Separate Login from Session
This involves a lot of refactoring and some API changes. However, it allows to clean up some parts of the code that I always considered ugly.